docs(gitignore): Add new folders to ignore

--- a/.gitignore
+++ b/.gitignore
@@ -1,3 +1,4 @@
+.cursor
 .vscode
 __pycache__/
 figure.png
@@ -6,3 +7,6 @@ unitree_sdk2_python/
 cam_high.jpg
 cam_right_wrist.jpg
 cam_left_wrist.jpg
+
+shells
+outputs
